# se-toolkit-lab-8

./: AGENTS.md  REPORT.md  docker-compose.yml  package.json
backend/: Dockerfile
caddy/: Caddyfile
nanobot/: Dockerfile  config.json  entrypoint.py  main.py  pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
