[project]
name = "lms-nanobot"
version = "0.1.0"
description = "Nanobot gateway for LMS"
readme = "README.md"
requires-python = "==3.14.2"
dependencies = [
    "lms-mcp",
    "nanobot-ai>=0.1.4.post6",
    "nanobot-webchat",
    "nanobot-channel-protocol",
]

[tool.uv.sources]
lms-mcp = { path = "../mcp" }
nanobot-webchat = { path = "../nanobot-websocket-channel/nanobot-webchat" }
nanobot-channel-protocol = { path = "../nanobot-websocket-channel/nanobot-channel-protocol" }
