[project]
name = "lms-nanobot"
version = "0.1.0"
description = "Nanobot gateway for LMS"
readme = "README.md"
requires-python = "==3.14.2"
dependencies = [
    "lms-mcp",
    "nanobot-ai",
    "nanobot-webchat",
    "nanobot-channel-protocol",
]

[tool.uv.sources]
lms-mcp = { workspace = true }
nanobot-webchat = { workspace = true }
nanobot-channel-protocol = { workspace = true }
